Unreleased
======

  * Convert from coffeescript to ES6.
  * Update minimum Node.js version to 6.X.
  * Update SockJSConnection implementation to be compatible with latest Node.js streams.
  * SockJSConnection properties `readable` and `writable` have been removed. These are used internally by Node.js streams.


0.3.19
======

  * Update `node-uuid` version #224
  * Add `disable_cors` option to prevent CORS headers from being added to responses #218
  * Add `dnt` header to whitelist #212
  * Add `x-forwarded-host` and `x-forwarded-port` headers to whitelist #208
  * Update `sockjs_url` default to latest 1.x target #223
  * Updated hapi.js example #216

0.3.18
======

  * Change to using `res.statusCode` instead of manual parsing of `res._header` #213
  * Update sockjs-protocol filename in README #203

0.3.17
======

  * Fix usage of undefined `session` in `heartbeat_timeout` #179

0.3.16
======

  * Fix CORS response for null origin #177
  * Add websocket ping-pong and close if no response #129, #162, #169
  * Update sockjs-client version in examples #182
  * Add koa example #180
  * Disable raw websocket endpoint when websocket = false #183
  * Upgrade to faye-websocket 0.10.0 and use proper close code
  * When connection is aborted, don't delay the teardown
  * Forward additional headers #188
  * Add `no-transform` to Cache-Control headers #189
  * Update documentation about heartbeats #192


0.3.15
======

  * Remove usage of naked '@' function params to be compatible with coffeescript 1.9.0 #175

0.3.14
======

  * Re-publish to npm because of build issue in 0.3.13

0.3.13
======

  * Upgrade faye-websocket to 0.9.3 to fix #171

0.3.12
======

 * Allow Faye socket constructor options to be passed with
   faye_server_options option to createServer
 * Fix websocket bad json tests
 * Upgrade Faye to allow 0.9.*

0.3.11
======

 * #133 -  only delay disconnect on non-websocket transports
 * Upgrade Faye to 0.8.0

0.3.10
======
