@@ -4,6 +4,11 @@ const fs = require('fs');
 const querystring = require('querystring');
 
 class GenericApp {
+  constructor(options, emit) {
+    this.options = options;
+    this.emit = emit;
+  }
+
   handle_404(req, res, x) {
     if (res.finished) {
       return x;
@@ -20,7 +25,6 @@ class GenericApp {
   }
 
   handle_error(req, res, x) {
-    // console.log('handle_error', x.stack)
     if (res.finished) {
       return x;
     }
@@ -45,8 +49,7 @@ class GenericApp {
   }
 
   log(severity, line) {
-    // eslint-disable-next-line no-console
-    return console.log(line);
+    this.options.log(severity, line);
   }
 
   expose_html(req, res, content) {
