@@ -16,7 +16,7 @@ class Server extends events.EventEmitter {
       jsessionid: false,
       heartbeat_delay: 25000,
       disconnect_delay: 5000,
-      log(severity, line) { console.log(line); },
+      log() {},
       sockjs_url: 'https://cdn.jsdelivr.net/sockjs/1.0.1/sockjs.min.js'
     };
     Object.assign(this.options, user_options);
